--- a/detail.html
+++ b/detail.html
@@ -7,16 +7,41 @@
     </head>
     <body>
         <div>
-            <div>
-                <img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
-                <p>Header div</p>
-            </div>
-            <div>
-                <p>Contact div</p>
-            </div>
-            <div>
-                <p>Footer div</p>
-            </div>
+            <header>
+                <div id = "header">
+                    <img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
+                    <a href = "login.html" target = "_blank">Login</a>
+                </div>
+            </header>
+            <main>                        
+                    <img src = "https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt = "Radisson Blu">
+                    <a href = "payment.html" >
+                        <div>
+                            <p>Book Now</p>
+                        </div>
+                    </a>
+                    <p>Radisson Blu</p>
+                    <p>5 Star</p>
+                    <p>Features</p>
+                    <ul>
+                        <li>Delicious Food</li>
+                        <li>Hygenic</li>
+                        <li>Excellant Service</li>
+                    </ul>
+                    <p>Description</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    
+            </main>
+            <footer>
+                <div>
+                    <a href = "contact.html">Contact us</a>
+                    <br>
+                    <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" height = "20px" width = "20px"></a>
+                    <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" height = "20px" width = "20px"></a>
+                    <a href = "https://twitter.com"><img src = "assests/images/twitter.png" height = "20px" width = "20px"></a>
+                    <p>&copy; 2020 HOTEL BOOKING PVT LTD</p>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
