--- a/index.html
+++ b/index.html
@@ -7,16 +7,37 @@
     </head>
     <body>
         <div>
-            <div>
-                <img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
-                <p>Header div</p>
-            </div>
-            <div>
-                <p>Contact div</p>
-            </div>
-            <div>
-                <p>Footer div</p>
-            </div>
+            <header>
+                <div id = "header">
+                    <img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
+                    <a href = "login.html" target = "_blank">Login</a>
+                </div>
+            </header>
+            <main>
+                <div id = "content">
+                    <form>
+                        <label for = "city">
+                            <input id = "city" type = "text" name = "city-name" placeholder="City">
+                        </label>
+                    </form>
+                    <a href = "list.html" target = "_blank"><img src = "https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt = "New Delhi" height="200px" width = "200px"></a>
+                    <img src = "https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt = "Goa" height="200px" width = "200px"> 
+                    <img src = "https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt = "Hyderabad" height="200px" width = "200px"> 
+                    <img src = "https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt = "Kolkata" height="200px" width = "200px"> 
+                    <br>
+                    <a href = "index.html" > View more</a>
+                </div>
+            </main>
+            <footer>
+                <div>
+                    <a href = "contact.html">Contact us</a>
+                    <br>
+                    <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" height = "20px" width = "20px"></a>
+                    <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" height = "20px" width = "20px"></a>
+                    <a href = "https://twitter.com"><img src = "assests/images/twitter.png" height = "20px" width = "20px"></a>
+                    <p>&copy; 2020 HOTEL BOOKING PVT LTD</p>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
