--- a/list.html
+++ b/list.html
@@ -7,16 +7,43 @@
     </head>
     <body>
         <div>
-            <div>
-                <img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
-                <p>Header div</p>
-            </div>
-            <div>
-                <p>Contact div</p>
-            </div>
-            <div>
-                <p>Footer div</p>
-            </div>
+            <header>
+                <div id = "header">
+                    <img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
+                    <a href = "login.html" target = "_blank">Login</a>
+                </div>
+            </header>
+            <main>
+                <div>
+                    <ul>
+                        <li><a href = "list.html">List View</a></li>
+                        <li><a href = "map.html">Map View</a></li>
+                    </ul>
+                    <a href = "detail.html">
+                        <div>
+                            <img src = "https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt = "Radisson Blu">
+                            <br>
+                            <p>Radisson Blu</p>
+                        </div>
+                    </a>
+                    <div>
+                        <img src = "https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt = "The Lalit Hotel">
+                    </div>
+                    <div>
+                        <img src = "https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt = "Taj Palace">
+                    </div>
+                </div>
+            </main>
+            <footer>
+                <div>
+                    <a href = "contact.html">Contact us</a>
+                    <br>
+                    <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" height = "20px" width = "20px"></a>
+                    <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" height = "20px" width = "20px"></a>
+                    <a href = "https://twitter.com"><img src = "assests/images/twitter.png" height = "20px" width = "20px"></a>
+                    <p>&copy; 2020 HOTEL BOOKING PVT LTD</p>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
