--- a/payment.html
+++ b/payment.html
@@ -7,16 +7,36 @@
     </head>
     <body>
         <div>
-            <div>
-                <img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
-                <p>Header div</p>
-            </div>
-            <div>
-                <p>Contact div</p>
-            </div>
-            <div>
-                <p>Footer div</p>
-            </div>
+            <header>
+                <div id = "header">
+                    <img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
+                    <a href = "login.html" target = "_blank">Login</a>
+                </div>
+            </header>
+            <main>
+                <div>
+                    <img src = "https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt = "Radisson Blu">
+                    <p>Radisson Blu</p>
+                    <p>#38 of 1289 hotels in New Delhi</p>
+                    <p>Name: Gibin Ninan</p>
+                    <p><b>Number of Adults:</b> 2</p>
+                    <p><b>Check-in Date:</b> 06-06-2020</p>
+                    <p><b>Check-out Date:</b> 08-0602020</p>
+                    <p><b>Tariff Breakdown:</b> Rs.1000 x 2 Adults x 2 Nights</p>
+                    <p><b>Total Answer:</b> Rs.4000</p>
+                    <a href = "payment.html" >Pay now</a>
+                </div>
+            </main>
+            <footer>
+                <div>
+                    <a href = "contact.html">Contact us</a>
+                    <br>
+                    <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" height = "20px" width = "20px"></a>
+                    <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" height = "20px" width = "20px"></a>
+                    <a href = "https://twitter.com"><img src = "assests/images/twitter.png" height = "20px" width = "20px"></a>
+                    <p>&copy; 2020 HOTEL BOOKING PVT LTD</p>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
