--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,26 @@
     <body>
         <div>
             <h3>CONTACT US</h3>
+            <p>Our team will get in touch with you soon</p>
+            <table>
+                <form id = "contact" action = "index.html">
+                    <tr>
+                        <th><label for = "name">Name : </label></th>
+                        <td><input id ="name" type = "text" name = "name" required placeholder="Jose Markose"></td>
+                    </tr>
+                    <tr>
+                        <th><label for = "email">Email : </label></th>
+                        <td><input id ="email" type = "email" name = "email" required placeholder="yourname@email.com"></td>
+                    </tr>
+                    <tr>
+                        <th><label for = "phone">Mobile : </label></th>
+                        <td><input id ="phone" type ="text" name = "phone" required placeholder="(+91)__________"></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><button type="submit" id = "submit-btn" name = "submit-contact">Contact me</button></td>
+                    </tr>
+                </form>
+            </table>
         </div>
     </body>
 </html>
