--- a/login.html
+++ b/login.html
@@ -8,6 +8,21 @@
     <body>
         <div>
             <h3>LOGIN</h3>
+            <form id="login" action = "index.html">
+                <table>
+                    <tr>
+                    <th><label for ="email" >Email Address: </label></th>
+                    <td><input id = "email" name = "email" type = "email" required placeholder="yourname@email.com"></td>
+                    </tr>
+                    <tr>
+                        <th><label for ="password" >Password: </label></th>
+                        <td><input id = "password" name = "password" type = "password" required  placeholder="*******" ></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><button type = "submit" name = "submit" id = "submit-btn">Enter me in</button></td>
+                    </tr>
+                </table>
+            </form>
         </div>
     </body>
 </html>
