--- a/list.html
+++ b/list.html
@@ -9,15 +9,15 @@
         <div>
             <header>
                 <div id = "header">
-                    <img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
-                    <a href = "login.html" target = "_blank">Login</a>
+                    <a href="index.html"><img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150"></a>
+                    <a href = "login.html">Login</a>
                 </div>
             </header>
             <main>
                 <div>
                     <ul>
-                        <li><a href = "list.html">List View</a></li>
-                        <li><a href = "map.html">Map View</a></li>
+                        <li><a href = "#">List View</a></li>
+                        <li><a href = "#map-view">Map View</a></li>
                     </ul>
                     <a href = "detail.html">
                         <div>
@@ -32,6 +32,10 @@
                     <div>
                         <img src = "https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt = "Taj Palace">
                     </div>
+                    <div id="map-view">
+                        <img src = "https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt = "map">
+                        <p>Map view</p>
+                    </div>
                 </div>
             </main>
             <footer>
@@ -41,7 +45,7 @@
                     <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" height = "20px" width = "20px"></a>
                     <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" height = "20px" width = "20px"></a>
                     <a href = "https://twitter.com"><img src = "assests/images/twitter.png" height = "20px" width = "20px"></a>
-                    <p>&copy; 2020 HOTEL BOOKING PVT LTD</p>
+                    <p>&copy; 2021 HOTEL BOOKING PVT LTD</p>
                 </div>
             </footer>
         </div>
