--- a/payment.html
+++ b/payment.html
@@ -9,8 +9,8 @@
         <div>
             <header>
                 <div id = "header">
-                    <img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
-                    <a href = "login.html" target = "_blank">Login</a>
+                    <a href="index.html"><img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150"></a>
+                    <a href = "login.html">Login</a>
                 </div>
             </header>
             <main>
@@ -34,7 +34,7 @@
                     <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" height = "20px" width = "20px"></a>
                     <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" height = "20px" width = "20px"></a>
                     <a href = "https://twitter.com"><img src = "assests/images/twitter.png" height = "20px" width = "20px"></a>
-                    <p>&copy; 2020 HOTEL BOOKING PVT LTD</p>
+                    <p>&copy; 2021 HOTEL BOOKING PVT LTD</p>
                 </div>
             </footer>
         </div>
