Disabled auto-complete

--- a/login.html
+++ b/login.html
@@ -12,11 +12,11 @@
                 <table>
                     <tr>
                     <th><label for ="email" >Email Address: </label></th>
-                    <td><input id = "email" name = "email" type = "email" required placeholder="yourname@email.com"></td>
+                    <td><input id = "email" name = "email" type = "email" required placeholder="yourname@email.com" autocomplete="off"></td>
                     </tr>
                     <tr>
                         <th><label for ="password" >Password: </label></th>
-                        <td><input id = "password" name = "password" type = "password" required  placeholder="*******" ></td>
+                        <td><input id = "password" name = "password" type = "password" required  placeholder="*******" autocomplete="off"></td>
                     </tr>
                     <tr>
                         <td colspan="2"><button type = "submit" name = "submit" id = "submit-btn">Enter me in</button></td>
