--- a/detail.html
+++ b/detail.html
@@ -4,17 +4,19 @@
         <title>
             Detail
         </title>
+        <link rel="stylesheet" href="styles/common.css" type="text/css">
+        <link rel="stylesheet" href="styles/detail.css" type="text/css">
     </head>
     <body>
         <div>
             <header>
                 <div id = "header">
-                    <a href="index.html"><img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150"></a>
+                    <a href="index.html"><img id="logo" src = "assests/images/logo.png" alt = "logo"></a>
                     <a href = "login.html">Login</a>
                 </div>
             </header>
             <main>                        
-                    <img src = "https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt = "Radisson Blu">
+                    <img class = "detail-img"src = "https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt = "Radisson Blu">
                     <div>
                         <table>
                             <form action = "payment.html">
