--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
         <title>
             Index
         </title>
+        <link rel="stylesheet" href="styles/common.css" type = "text/css">
+        <link rel="stylesheet" href="styles/index.css" type = "text/css">
     </head>
     <body>
         <div>
             <header>
                 <div id = "header">
-                    <img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
+                    <img id= "logo" src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
                     <a href = "login.html" >Login</a>
                 </div>
             </header>
@@ -20,10 +22,10 @@
                             <input id = "city" type = "text" name = "city-name" placeholder="City">
                         </label>
                     </form>
-                    <a href = "list.html" target = "_blank"><img src = "https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt = "New Delhi" height="200px" width = "200px"></a>
-                    <img src = "https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt = "Goa" height="200px" width = "200px"> 
-                    <img src = "https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt = "Hyderabad" height="200px" width = "200px"> 
-                    <img src = "https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt = "Kolkata" height="200px" width = "200px"> 
+                    <a href = "list.html" target = "_blank"><img class="city-img" src = "https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt = "New Delhi" height="200px" width = "200px"></a>
+                    <img class="city-img" src = "https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt = "Goa" height="200px" width = "200px"> 
+                    <img class="city-img" src = "https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt = "Hyderabad" height="200px" width = "200px"> 
+                    <img class="city-img" src = "https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt = "Kolkata" height="200px" width = "200px"> 
                     <br>
                     <a href = "index.html" > View more</a>
                 </div>
