--- a/list.html
+++ b/list.html
@@ -4,38 +4,42 @@
         <title>
             List
         </title>
+        <link rel="stylesheet" href="styles/common.css" type="text/css">
+        <link rel="stylesheet" href="styles/list.css" type="text/css">
     </head>
     <body>
         <div>
             <header>
                 <div id = "header">
-                    <a href="index.html"><img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150"></a>
+                    <a href="index.html"><img id="logo" src = "assests/images/logo.png" alt = "logo" height = "100" width = "150"></a>
                     <a href = "login.html">Login</a>
                 </div>
             </header>
             <main>
                 <div>
                     <ul>
-                        <li><a href = "#">List View</a></li>
+                        <li><a href = "#list-view">List View</a></li>
                         <li><a href = "#map-view">Map View</a></li>
                     </ul>
-                    <a href = "detail.html">
+                    <div id="list-view">
+                        <a href = "detail.html">
+                            <div>
+                                <img src = "https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt = "Radisson Blu">
+                                <br>
+                                <p>Radisson Blu</p>
+                            </div>
+                        </a>
                         <div>
-                            <img src = "https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt = "Radisson Blu">
-                            <br>
-                            <p>Radisson Blu</p>
+                            <img src = "https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt = "The Lalit Hotel">
                         </div>
-                    </a>
-                    <div>
-                        <img src = "https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt = "The Lalit Hotel">
-                    </div>
-                    <div>
-                        <img src = "https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt = "Taj Palace">
+                        <div>
+                            <img src = "https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt = "Taj Palace">
+                        </div>
                     </div>
                     <div id="map-view">
                         <img src = "https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt = "map">
                         <p>Map view</p>
-                    </div>
+                    </div>            
                 </div>
             </main>
             <footer>
