--- a/loader.html
+++ b/loader.html
@@ -4,6 +4,8 @@
         <title>
             Loader
         </title>
+        <link rel="stylesheet" href="styles/common.css">
+        <link rel="stylesheet" href="styles/loader.css">
     </head>
     <body>
         <div>
