--- a/payment.html
+++ b/payment.html
@@ -4,18 +4,20 @@
         <title>
             Payment
         </title>
+        <link rel="stylesheet" href="styles/common.css" type="text/css">
+        <link rel="stylesheet" href="styles/payment.css" type="text/css">
     </head>
     <body>
         <div>
             <header>
                 <div id = "header">
-                    <a href="index.html"><img src = "assests/images/logo.png" alt = "logo" height = "100" width = "150"></a>
+                    <a href="index.html"><img id="logo" src = "assests/images/logo.png" alt = "logo" height = "100" width = "150"></a>
                     <a href = "login.html">Login</a>
                 </div>
             </header>
             <main>
                 <div>
-                    <img src = "https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt = "Radisson Blu">
+                    <img class = "payment-img" src = "https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt = "Radisson Blu">
                     <p>Radisson Blu</p>
                     <p>#38 of 1289 hotels in New Delhi</p>
                     <p>Name: Gibin Ninan</p>
