--- a/detail.html
+++ b/detail.html
@@ -46,17 +46,18 @@
                             </form>
                         </table>
                     </div>
-                    <p>Radisson Blu</p>
-                    <p>5 Star</p>
-                    <p>Features</p>
-                    <ul>
-                        <li>Delicious Food</li>
-                        <li>Hygenic</li>
-                        <li>Excellant Service</li>
-                    </ul>
-                    <p>Description</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    
+                    <div id="description">
+                        <p>Radisson Blu</p>
+                        <p>5 Star</p>
+                        <p>Features</p>
+                        <ul>
+                            <li>Delicious Food</li>
+                            <li>Hygenic</li>
+                            <li>Excellant Service</li>
+                        </ul>
+                        <p>Description</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
             </main>
             <footer>
                 <div>
