--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
             </header>
             <main>
                 <div id = "content">
-                    <form>
+                    <form id="search-bar">
                         <label for = "city">
                             <input id = "city" type = "text" name = "city-name" placeholder="City">
                         </label>
                     </form>
-                    <a href = "list.html" target = "_blank"><img class="city-img" src = "https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt = "New Delhi" height="200px" width = "200px"></a>
-                    <img class="city-img" src = "https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt = "Goa" height="200px" width = "200px"> 
-                    <img class="city-img" src = "https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt = "Hyderabad" height="200px" width = "200px"> 
-                    <img class="city-img" src = "https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt = "Kolkata" height="200px" width = "200px"> 
-                    <br>
+                    <div id="citycards">
+                        <a href = "list.html" target = "_blank"><img class="city-img" src = "https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt = "New Delhi" height="200px" width = "200px"></a>
+                        <img class="city-img" src = "https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt = "Goa" height="200px" width = "200px"> 
+                        <img class="city-img" src = "https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt = "Hyderabad" height="200px" width = "200px"> 
+                        <img class="city-img" src = "https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt = "Kolkata" height="200px" width = "200px"> 
+                    </div>
                     <a href = "index.html" > View more</a>
+                    
                 </div>
             </main>
             <footer>
