--- a/payment.html
+++ b/payment.html
@@ -16,14 +16,18 @@
                 </div>
             </header>
             <main>
-                <div>
+                <div id="payment-hotel">
                     <img class = "payment-img" src = "https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt = "Radisson Blu">
                     <p>Radisson Blu</p>
                     <p>#38 of 1289 hotels in New Delhi</p>
                     <p>Name: Gibin Ninan</p>
+                </div>
+                <div id="payment-details">
                     <p><b>Number of Adults:</b> 2</p>
                     <p><b>Check-in Date:</b> 06-06-2020</p>
                     <p><b>Check-out Date:</b> 08-0602020</p>
+                </div>    
+                <div id="tariff">
                     <p><b>Tariff Breakdown:</b> Rs.1000 x 2 Adults x 2 Nights</p>
                     <p><b>Total Answer:</b> Rs.4000</p>
                     <a href = "payment.html" >Pay now</a>
