--- a/detail.html
+++ b/detail.html
@@ -6,13 +6,14 @@
         </title>
         <link rel="stylesheet" href="styles/common.css" type="text/css">
         <link rel="stylesheet" href="styles/detail.css" type="text/css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
     </head>
     <body>
         <div>
             <header>
                 <div id = "header">
                     <a href="index.html"><img id="logo" src = "assests/images/logo.png" alt = "logo"></a>
-                    <a href = "login.html">Login</a>
+                    <a id="login" href = "login.html">Login</a>
                 </div>
             </header>
             <main>                        
@@ -61,12 +62,14 @@
             </main>
             <footer>
                 <div>
-                    <a href = "contact.html">Contact us</a>
+                    <a id="contact" href = "contact.html">Contact us</a>
                     <br>
-                    <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" height = "20px" width = "20px"></a>
-                    <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" height = "20px" width = "20px"></a>
-                    <a href = "https://twitter.com"><img src = "assests/images/twitter.png" height = "20px" width = "20px"></a>
-                    <p>&copy; 2021 HOTEL BOOKING PVT LTD</p>
+                    <div id="social">
+                        <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" height = "20px" width = "20px"></a>
+                        <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" height = "20px" width = "20px"></a>
+                        <a href = "https://twitter.com"><img src = "assests/images/twitter.png" height = "20px" width = "20px"></a>
+                    </div>
+                    <p id="copyright">&copy; 2021 HOTEL BOOKING PVT LTD</p>
                 </div>
             </footer>
         </div>
