--- a/loader.html
+++ b/loader.html
@@ -6,6 +6,7 @@
         </title>
         <link rel="stylesheet" href="styles/common.css">
         <link rel="stylesheet" href="styles/loader.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
     </head>
     <body>
         <div>
