--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
         <title>
             Login
         </title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
     </head>
     <body>
         <div>
