--- a/payment.html
+++ b/payment.html
@@ -9,43 +9,43 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
     </head>
     <body>
-        <div>
             <header>
-                <div id = "header">
-                    <a href="index.html"><img id="logo" src = "assests/images/logo.png" alt = "logo" height = "100" width = "150"></a>
-                    <a id="login" href = "login.html">Login</a>
-                </div>
+                <img id= "logo" src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
+                <a id="login" href = "login.html" >Login</a>
             </header>
             <main>
                 <div id="payment-hotel">
                     <img class = "payment-img" src = "https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt = "Radisson Blu">
-                    <p>Radisson Blu</p>
-                    <p>#38 of 1289 hotels in New Delhi</p>
-                    <p>Name: Gibin Ninan</p>
+                    <div>
+                        <h2>Radisson Blu Hotel</h2>
+                        <span>#38 of 1289 hotels in New Delhi</span>
+                        <span>National Highway 8, New Delhi 110017 India</span>
+                    </div>
                 </div>
-                <div id="payment-details">
-                    <p><b>Number of Adults:</b> 2</p>
-                    <p><b>Check-in Date:</b> 06-06-2020</p>
-                    <p><b>Check-out Date:</b> 08-0602020</p>
-                </div>    
-                <div id="tariff">
-                    <p><b>Tariff Breakdown:</b> Rs.1000 x 2 Adults x 2 Nights</p>
-                    <p><b>Total Answer:</b> Rs.4000</p>
-                    <a href = "payment.html" >Pay now</a>
+                <div id="bill">
+                    <div id="payment-details">
+                        <p><span>Name:</span> Gibin Ninan</p>
+                        <p><span>Number of Adults:</span> 2</p>
+                        <p><span>Check-in Date:</span> 06-06-2020</p>
+                        <p><span>Check-out Date:</span> 08-06-2020</p>
+                    </div>    
+                    <div id="tariff">
+                        <p><span>Tariff Breakdown:</span> Rs.1000 x 2 Adults x 2 Nights</p>
+                        <p><span>Total Answer:</span> Rs.4000</p>
+                    </div>
+                    <div>
+                        <a href = "payment.html" >Pay now</a>
+                    </div>
                 </div>
             </main>
             <footer>
-                <div>
-                    <a id="contact" href = "contact.html">Contact us</a>
-                    <br>
-                    <div id="social">
-                        <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" height = "20px" width = "20px"></a>
-                        <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" height = "20px" width = "20px"></a>
-                        <a href = "https://twitter.com"><img src = "assests/images/twitter.png" height = "20px" width = "20px"></a>
-                    </div>
-                    <p id="copyright">&copy; 2021 HOTEL BOOKING PVT LTD</p>
+                <a id="contact" href = "contact.html">Contact us</a>
+                <div id="social">
+                    <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" height = "20px" width = "20px"></a>
+                    <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" height = "20px" width = "20px"></a>
+                    <a href = "https://twitter.com"><img src = "assests/images/twitter.png" height = "20px" width = "20px"></a>
                 </div>
+                <p id="copyright">&copy; 2021 HOTEL BOOKING PVT LTD</p>
             </footer>
-        </div>
     </body>
 </html>
