--- a/contact.html
+++ b/contact.html
@@ -5,30 +5,55 @@
             Contact
         </title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="styles/common.css">
     </head>
     <body>
-        <div>
-            <h3>CONTACT US</h3>
-            <p>Our team will get in touch with you soon</p>
-            <table>
-                <form id = "contact" action = "index.html">
-                    <tr>
-                        <th><label for = "name">Name : </label></th>
-                        <td><input id ="name" type = "text" name = "name" required placeholder="Jose Markose"></td>
-                    </tr>
-                    <tr>
-                        <th><label for = "email">Email : </label></th>
-                        <td><input id ="email" type = "email" name = "email" required placeholder="yourname@email.com"></td>
-                    </tr>
-                    <tr>
-                        <th><label for = "phone">Mobile : </label></th>
-                        <td><input id ="phone" type ="text" name = "phone" required placeholder="(+91)__________"></td>
-                    </tr>
-                    <tr>
-                        <td colspan="2"><button type="submit" id = "submit-btn" name = "submit-contact">Contact me</button></td>
-                    </tr>
-                </form>
-            </table>
+        <button id="contact" class="btn btn-info" data-toggle="modal" data-target="#contactModal">Contact us</button>
+        <div class="modal fade" id="contactModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title w-100 text-center">Contact us</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body border-bottom-0">
+                        <form id = "contact" action = "index.html">
+                            <p>Thank you for reaching out to us!</p>
+                            <p>Our team will get in touch with you soon</p>
+                            <table>
+                                <tr>
+                                    <th><label for = "name">Name</label></th>
+                                    <td>&emsp;:&emsp;</td>
+                                    <td><input id ="name" type = "text" name = "name" required placeholder="Jose Markose"></td>
+                                </tr>
+                                <tr>
+                                    <th><label for = "email">Email</label></th>
+                                    <td>&emsp;:&emsp;</td>
+                                    <td><input id ="email" type = "email" name = "email" required placeholder="yourname@email.com"></td>
+                                </tr>
+                                <tr>
+                                    <th><label for = "phone">Mobile</label></th>
+                                    <td>&emsp;:&emsp;</td>
+                                    <td><input id ="phone" type ="text" name = "phone" required placeholder="(+91)__________"></td>
+                                </tr>
+                            </table>
+                            <br>
+                            <div class="text-center">
+                                <button class="btn btn-primary rounded-pill m-auto" type="submit" id="submit-btn" name="submit-contact">
+                                    <span>Contact me</span>
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer" border-0>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
