--- a/list.html
+++ b/list.html
@@ -4,15 +4,18 @@
         <title>
             List
         </title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="styles/common.css" type="text/css">
         <link rel="stylesheet" href="styles/list.css" type="text/css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     </head>
     <body>
         <div>
             <header>
-                <img id= "logo" src = "assests/images/logo.png" alt = "logo" height = "100" width = "150">
-                <a id="login" href = "login.html" >Login</a>
+                <a href="index.html"><img id= "logo" src = "assests/images/logo.png" alt = "logo" height = "100" width = "150"></a>
+                <button id="login" class="btn btn-light" data-toggle="modal" data-target="#loginModal">Login</button>
             </header>
             <main>
                 <div>
@@ -61,9 +64,83 @@
                         <p>Map view</p>
                     </div>            
                 </div>
+                <div class="modal fade" id="loginModal" data-backdrop="static">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title w-100 text-center">Login</h5>
+                          <buttom type="button" class="close" data-dismiss="modal" aria-label="close">
+                            <span aria-hidden="true">&times;</span>
+                          </buttom>
+                        </div>
+                        <form id="login-form" action = "index.html">
+                        <div class="modal-body">
+                            <table>
+                              <tr>
+                                <th><label for ="email" >Email Address: </label></th>
+                                <td><input id = "email" name = "email" type = "email" required placeholder="yourname@email.com" autocomplete="off"></td>
+                              </tr>
+                              <tr>
+                                <th><label for ="password" >Password: </label></th>
+                                <td><input id = "password" name = "password" type = "password" required  placeholder="*******" autocomplete="off"></td>
+                              </tr>
+                            </table>
+                        </div>
+                        <div class="modal-footer">
+                          <button class="btn btn-primary btn-block rounded-pill" type="submit" name="submit" >
+                            Login
+                          </button>
+                        </div>
+                      </form>   
+                      </div>
+                    </div>
+                  </div>
+                  <div class="modal fade" id="contactModal">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title w-100 text-center">Contact us</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body border-bottom-0">
+                                <form id = "contact-form" action = "index.html">
+                                    <p>Thank you for reaching out to us!</p>
+                                    <p>Our team will get in touch with you soon</p>
+                                    <table>
+                                        <tr>
+                                            <th><label for = "name">Name</label></th>
+                                            <td>&emsp;:&emsp;</td>
+                                            <td><input id ="name" type = "text" name = "name" required placeholder="Jose Markose"></td>
+                                        </tr>
+                                        <tr>
+                                            <th><label for = "email">Email</label></th>
+                                            <td>&emsp;:&emsp;</td>
+                                            <td><input id ="email" type = "email" name = "email" required placeholder="yourname@email.com"></td>
+                                        </tr>
+                                        <tr>
+                                            <th><label for = "phone">Mobile</label></th>
+                                            <td>&emsp;:&emsp;</td>
+                                            <td><input id ="phone" type ="text" name = "phone" required placeholder="(+91)__________"></td>
+                                        </tr>
+                                    </table>
+                                    <br>
+                                    <div class="text-center">
+                                        <button class="btn btn-primary rounded-pill m-auto" type="submit" id="submit-btn" name="submit-contact">
+                                            <span>Contact me</span>
+                                        </button>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer" border-0>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </main>
             <footer>
-                <a id="contact" href = "contact.html">Contact us</a>
+                <button id="contact" class="btn btn-info" data-toggle="modal" data-target="#contactModal">Contact us</button>
                 <div id="social">
                     <a href = "https://www.facebook.com"><img src = "assests/images/facebook.png" height = "20px" width = "20px"></a>
                     <a href = "https://www.instagram.com"><img src = "assests/images/instagram.png" height = "20px" width = "20px"></a>
@@ -72,5 +149,6 @@
                 <p id="copyright">&copy; 2021 HOTEL BOOKING PVT LTD</p>
             </footer>
         </div>
+
     </body>
 </html>
