--- a/login.html
+++ b/login.html
@@ -5,25 +5,45 @@
             Login
         </title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div>
-            <h3>LOGIN</h3>
-            <form id="login" action = "index.html">
-                <table>
+        <button class="btn btn-light" data-toggle="modal" data-target="#loginModal">Login</button>
+
+        <div class="modal fade" id="loginModal" data-backdrop="static">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title w-100 text-center">Login</h5>
+                <buttom type="button" class="close" data-dismiss="modal" aria-label="close">
+                  <span aria-hidden="true">&times;</span>
+                </buttom>
+              </div>
+              <form id="login-form" action = "index.html">
+              <div class="modal-body">
+                  <table>
                     <tr>
-                    <th><label for ="email" >Email Address: </label></th>
-                    <td><input id = "email" name = "email" type = "email" required placeholder="yourname@email.com" autocomplete="off"></td>
+                      <th><label for ="email" >Email Address</label></th>
+                      <td>&emsp;:&emsp;</td>
+                      <td><input id = "email" name = "email" type = "email" required placeholder="yourname@email.com" autocomplete="off"></td>
                     </tr>
                     <tr>
-                        <th><label for ="password" >Password: </label></th>
-                        <td><input id = "password" name = "password" type = "password" required  placeholder="*******" autocomplete="off"></td>
+                      <th><label for ="password" >Password</label></th>
+                      <td>&emsp;:&emsp;</td>
+                      <td><input id = "password" name = "password" type = "password" required  placeholder="*******" autocomplete="off"></td>
                     </tr>
-                    <tr>
-                        <td colspan="2"><button type = "submit" name = "submit" id = "submit-btn">Enter me in</button></td>
-                    </tr>
-                </table>
-            </form>
+                  </table>
+              </div>
+              <div class="modal-footer">
+                <button class="btn btn-primary btn-block rounded-pill" type="submit" name="submit" >
+                  Login
+                </button>
+              </div>
+            </form>   
+            </div>
+          </div>
         </div>
     </body>
 </html>
