map view reenabled

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </div>  
                     </div>
                     <div id="view-more">
-                        <a href = "index.html" > View more &gt; &gt;</a>
+                        <button class="btn btn-secondary"><a href = "index.html">View more &gt; &gt;</a></button>
                     </div>
                     
                 </div>
